--- a/UnityProjects/LayoutEditor/Packages/manifest.json
+++ b/UnityProjects/LayoutEditor/Packages/manifest.json
@@ -40,6 +40,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+	"com.tayx.graphy": "https://github.com/johnparker007/graphy.git"
   }
 }
