--- a/UnityProjects/LayoutEditor/Packages/manifest.json
+++ b/UnityProjects/LayoutEditor/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.tayx.graphy": "https://github.com/johnparker007/graphy.git",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.16",
@@ -10,6 +11,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
+    "com.yasirkula.ingamedebugconsole": "https://github.com/johnparker007/UnityIngameDebugConsole.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -40,7 +42,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-	"com.tayx.graphy": "https://github.com/johnparker007/graphy.git"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
