--- a/UnityProjects/MFMELayoutExtractor/Packages/manifest.json
+++ b/UnityProjects/MFMELayoutExtractor/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
+    "com.yasirkula.ingamedebugconsole": "https://github.com/johnparker007/UnityIngameDebugConsole.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
