--- a/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
+++ b/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
@@ -48,6 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -77,10 +78,12 @@
     <Compile Include="Mfme\LayoutCopier.cs" />
     <Compile Include="Mfme\MfmeController.cs" />
     <Compile Include="Mfme\MfmeOasisCustomRegistry.cs" />
+    <Compile Include="WindowCapture\NativeMethods.cs" />
     <Compile Include="OutputLog.cs" />
     <Compile Include="PathHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowCapture\WindowCapture.cs" />
     <Compile Include="WindowsInput\IInputDeviceStateAdaptor.cs" />
     <Compile Include="WindowsInput\IInputMessageDispatcher.cs" />
     <Compile Include="WindowsInput\IInputSimulator.cs" />
