MfmeTools - porting more code from ArcadeSim

--- a/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
+++ b/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
@@ -64,9 +64,48 @@
   <ItemGroup>
     <Compile Include="Configuration.cs" />
     <Compile Include="Extensions\RichTextBoxExtensions.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentAceMatrix.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentAceVideo.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentAlpha.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentAlphaNew.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBackground.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBandReel.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBarcrestBwbVideo.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBase.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBfmAlpha.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBfmColourLed.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBfmLed.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBfmVideo.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBitmap.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentBorder.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentButton.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentCheckbox.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentDiscReel.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentDotAlpha.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentDotMatrix.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentEpochAlpha.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentEpochMatrix.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentFlipReel.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentFrame.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentIgtVfd.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentJpmBonusReel.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentLabel.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentLamp.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentLed.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentMatrixAlpha.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentMaygayVideo.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentPlasma.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentPrismLamp.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentProconnMatrix.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentReel.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentRgbLed.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentSevenSegment.cs" />
+    <Compile Include="ExtractComponents\ExtractComponentSevenSegmentBlock.cs" />
     <Compile Include="Extractor.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Helpers\MfmeGamFileHelper.cs" />
+    <Compile Include="JsonDataStructures\Vector2IntJSON.cs" />
+    <Compile Include="JsonDataStructures\ColorJSON.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,9 +117,11 @@
     <Compile Include="Mfme\LayoutCopier.cs" />
     <Compile Include="Mfme\MFMEAutomation.cs" />
     <Compile Include="Mfme\MfmeController.cs" />
+    <Compile Include="Mfme\MfmeExtractor.cs" />
     <Compile Include="Mfme\MfmeOasisCustomRegistry.cs" />
     <Compile Include="Mfme\MFMEConstants.cs" />
     <Compile Include="Mfme\MFMEScraperConstants.cs" />
+    <Compile Include="UnityStructWrappers\Color.cs" />
     <Compile Include="UnityStructWrappers\Color32.cs" />
     <Compile Include="UnityStructWrappers\Vector2Int.cs" />
     <Compile Include="WindowCapture\NativeMethods.cs" />
