MT: add ClearType override option for faster scraping of font style/size
There may later be a 'safe' option implemented that doesn't override ClearType, and instead does a copy/paste operation to extract the font style + size text, but only implementing the fast visual scrape initially.  As it uses the System font dialog, the fields are unscrapable due to ClearType.

--- a/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
+++ b/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Extensions\RichTextBoxExtensions.cs" />
+    <Compile Include="Helpers\FontSmoothingHelper.cs" />
     <Compile Include="Shared\ExtractComponents\ExtractComponentAceMatrix.cs" />
     <Compile Include="Shared\ExtractComponents\ExtractComponentAceVideo.cs" />
     <Compile Include="Shared\ExtractComponents\ExtractComponentAlpha.cs" />
