--- a/UnityProjects/LayoutEditor/Packages/manifest.json
+++ b/UnityProjects/LayoutEditor/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.vectorgraphics": "2.0.0-preview.24",
     "com.yasirkula.ingamedebugconsole": "https://github.com/johnparker007/UnityIngameDebugConsole.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
