--- a/UnityProjects/LayoutEditor/Packages/manifest.json
+++ b/UnityProjects/LayoutEditor/Packages/manifest.json
@@ -2,12 +2,13 @@
   "dependencies": {
     "com.caseydecoder.doxygengenerator": "https://github.com/johnparker007/DoxygenGenerator.git",
     "com.tayx.graphy": "https://github.com/johnparker007/graphy.git",
-    "com.unity.ide.visualstudio": "2.0.16",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "3.0.9",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ai.navigation": "2.0.4",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.ugui": "2.0.0",
     "com.unity.vectorgraphics": "2.0.0-preview.24",
     "com.yasirkula.ingamedebugconsole": "https://github.com/johnparker007/UnityIngameDebugConsole.git",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
