LE: MAME ROM identifier WIP (still dummy data)
- change gam structure to nested list (to support duplicate ROM keys)
- new class for the mame rom id stuff

--- a/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
+++ b/WindowsNetProjects/MfmeTools/MfmeTools/MfmeTools.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Extensions\RichTextBoxExtensions.cs" />
     <Compile Include="Helpers\FontSmoothingHelper.cs" />
+    <Compile Include="Mame\MameRomIdentifier.cs" />
     <Compile Include="Shared\ExtractComponents\ExtractComponentAceMatrix.cs" />
     <Compile Include="Shared\ExtractComponents\ExtractComponentAceVideo.cs" />
     <Compile Include="Shared\ExtractComponents\ExtractComponentAlpha.cs" />
