--- a/UnityProjects/LayoutEditor/Packages/manifest.json
+++ b/UnityProjects/LayoutEditor/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.tayx.graphy": "https://github.com/johnparker007/graphy.git",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.test-framework": "1.5.1",
     "com.unity.ugui": "2.0.0",
     "com.unity.vectorgraphics": "2.0.0-preview.24",
